--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-timer-hook": "^3.0.5",
     "wagmi": "^0.6.5"
   },
   "devDependencies": {
